<resources>
    <string name="app_name">KEA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password needs to be 6+ character long and have a digit)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_execute">ExecuteActivity</string>
    <string name="title_activity_variables">variablesActivity</string>
    <string name="title_activity_while">WhileActivity</string>
    <string name="title_param">Parametroak</string>
    <string name="title_prog">Programa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exek">ExekActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_prog">ProgActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="program_title">Programa:</string>
    <string name="emaitza_title">Emaitza:</string>
    <string name="exek_title">Exekutatu</string>
    <string name="makro_radio_button">Makro-programa</string>
    <string name="while_radio_button">While-programa</string>
    <string name="AlfabetoaTitle">Alfabetoa:</string>
    <string name="letter_not_in_alphabet">Letraren bat ez dago alfabetoan</string>
    <string name="errorTitle">Errorea</string>
    <string name="closeError">Irten</string>
    <string name="splashText">Kargatzen…</string>
    <string name="calculatorView">Konbertsorea</string>
    <string name="sarreraTV">Sarrera balioak:</string>
    <string name="bihurketaTV">Bihurketa:</string>
    <string name="bihurketaButton">Bihurtu!</string>
    <string name="lerroaTV">0 lerroa:</string>
    <string name="erroreMezuaTV">Errorea</string>
    <string name="sarreraMotaTV">Sarrera mota:</string>
    <string name="converter">Konbertsorea</string>
    <string name="gelditu_text">Gelditu</string>
    <string name="error_lerroa">%1$d. lerroa</string>
    <string name="hitza">Hitza</string>
    <string name="pila">Pila</string>
    <string name="bektore">Bektore</string>
    <string name="hitz_lista">Hitz lista</string>
    <string name="zenbaki">Zenbakia</string>
    <string name="loginTittle">Erregistratu zaitez</string>
    <string name="usernameTV">Erabiltzaile izena (izen hau publikoki erakutsiko da):</string>
    <string name="passwordTV">Pasahitza aukeratu:</string>
    <string name="emailTV">Emaila:</string>
    <string name="passwordConfTV">Pasahitza errepikatu:</string>
    <string name="registerButton">Bidali</string>
    <string name="error_confirmation_password">Sartutako pasahitza ez da aurrekoaren berdina</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email_value">Emaila</string>
    <string name="password_value">Pasahitza</string>
    <string name="password">Pasahitza:</string>
    <string name="title_activity_scrolling">RankingActivity</string>
    <string name="username">Erabiltzailea:</string>
    <string name="rankigTV">Ranking</string>
    <string name="registerLink"><u>Ez duzu konturik? Hemen klikatu</u></string>
    <string name="programaMota">Programa mota aukeratu:</string>
    <string name="hasi">Hasi!</string>
</resources>