<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.ehu.ehernandez035.kea.fragments.ProgFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/programaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/program_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exekButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/exek_title"
        app:layout_constraintBottom_toTopOf="@+id/emaitzaTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emaitzaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/emaitza_title"
        app:layout_constraintBottom_toTopOf="@+id/emaitzaView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emaitzaView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/programText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/lineNumberView"
        android:layout_toRightOf="@+id/lineNumberView"
        android:ems="10"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text="def main begin\n end def;"
        app:layout_constraintBottom_toBottomOf="@+id/lineNumberView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lineNumberView"
        app:layout_constraintTop_toTopOf="@+id/lineNumberView" />

    <TextView
        android:id="@+id/lineNumberView"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#eeeeee"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/exekButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programaTitle" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
